--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -179,7 +179,7 @@
       },
       "scheme-3": {
         "settings": {
-          "background": "#d02a2a",
+          "background": "#242833",
           "background_gradient": "",
           "text": "#ffffff",
           "button": "#ffffff",
